<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/srl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <dym.unique.com.springinglayoutlibrary.viewgroup.SpringingRelativeLayout
        android:id="@+id/srl_actionBar"
        android:layout_width="match_parent"
        android:translationZ="8dp"
        android:layout_height="60dp"
        android:background="#0099ff">
        <dym.unique.com.springinglayoutlibrary.view.SpringingImageView
            android:id="@+id/simg_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_back"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@string/regist"
            android:textColor="@android:color/white"/>
    </dym.unique.com.springinglayoutlibrary.viewgroup.SpringingRelativeLayout>

    <dym.unique.com.springinglayoutlibrary.viewgroup.SpringingLinearLayout
        android:id="@+id/sll_mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <dym.unique.com.springinglayoutlibrary.view.SpringingImageView
            android:id="@+id/simg_avatarMan"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:layout_marginTop="60dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/default_avatar_man"/>
        <LinearLayout
            android:id="@+id/ll_account"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="50dp">
            <dym.unique.com.springinglayoutlibrary.view.SpringingTextView
                android:id="@+id/stv_accountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:textColor="#666666"
                android:text="@string/account"/>
            <dym.unique.com.springinglayoutlibrary.view.SpringingEditText
                android:id="@+id/sedt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                android:inputType="number"
                android:textSize="18sp"
                android:hint="@string/account_hint"
                android:textColor="#666666"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:layout_width="250dp"
            android:layout_height="50dp">
            <dym.unique.com.springinglayoutlibrary.view.SpringingTextView
                android:id="@+id/stv_passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:textColor="#666666"
                android:text="@string/password_hint"/>
            <dym.unique.com.springinglayoutlibrary.view.SpringingEditText
                android:id="@+id/sedt_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:hint="@string/please_input_password"
                android:textColor="#666666"/>
        </LinearLayout>

        <dym.unique.com.springinglayoutlibrary.view.SpringingTextView
            android:id="@+id/stv_regist"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:text="@string/regist"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/drawable_regist_background"/>

        <dym.unique.com.springinglayoutlibrary.view.SpringingTextView
            android:id="@+id/stv_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="#c13a6d"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/drawable_login_background"/>

    </dym.unique.com.springinglayoutlibrary.viewgroup.SpringingLinearLayout>

</LinearLayout>